Fix company dashboard alignment

--- a/resources/css/companyDashboard/companyDashboard.scss
+++ b/resources/css/companyDashboard/companyDashboard.scss
@@ -10,40 +10,46 @@
         margin-bottom: 10px;
         margin-left: 1rem;
     }
-    
-    .teamContainer{
+
+    .teamContainer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         min-height: 50px;
         background-color: #D9D9D9;
+
         .titleDashboard {
             font-size: 20px;
             font-weight: 600;
             text-align: left;
             margin: 15px;
         }
+
         .titleTable {
             opacity: .6;
             height: 25px;
             border-bottom: solid 1px #000000;
-        }   
+        }
+
         #name {
             margin-left: 25px;
             font-weight: 600;
             text-align: left;
         }
+
         #member {
             font-weight: 600;
             text-align: right;
             margin-right: 20px;
         }
-        .team{
+
+        .team {
             text-align: left;
             font-size: 12px;
             margin: 10px 0 20px 40px;
             // padding: 10px 0 10px;
             border-bottom: 1px solid rgba(163, 163, 163, 0.5);
         }
+
         .listItem {
             text-align: right;
             margin: 10px 30px 20px 0;
@@ -51,22 +57,27 @@
             border-bottom: 1px solid rgb(163, 163, 163, 0.5);
         }
     }
-    .quest, .memberCompany, .rewardCompany {
+
+    .quest,
+    .memberCompany,
+    .rewardCompany {
         margin-top: 20px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         text-align: left;
-        .titleDashboard{
+
+        .titleDashboard {
             margin-left: 10px;
         }
     }
+
     .linkAll {
         text-align: left;
         margin-left: 25px;
         opacity: .6;
         font-style: italic;
     }
-    
+
     .addLink {
         margin-right: 15px;
         font-size: 30px;
@@ -249,18 +260,22 @@
 }
 
 @media only screen and (min-width: 600px) {
+
     .adminDashboard {
         height: calc(100vh - 100px);
         display: grid;
         grid-template-rows: repeat(12, 1fr);
         grid-template-columns: repeat(12, 1fr);
+        align-items: center;
+
+        .addLink {
+            margin-top: -11px;
+        }
 
         .titlePage {
             grid-row: 1/2;
             grid-column: 5/10;
         }
-
-
 
         .teamContainer {
             width: 350px;
@@ -268,8 +283,9 @@
             grid-row: 6/10;
             grid-column: 4/7;
             border-radius: 10px;
-            margin: 5px;
-
+            margin: 10px;
+            background-color: #ffffff;
+            box-shadow: 0px 0px 18px 1px #9499a1;
         }
 
         .logContainer {
@@ -278,7 +294,9 @@
             grid-row: 6/10; // opwaarts
             grid-column: 7/12; //zijwaarts
             border-radius: 10px;
-            margin: 5px;
+            margin: 10px;
+            background-color: #ffffff;
+            box-shadow: 0px 0px 18px 1px #9499a1;
 
         }
 
@@ -288,7 +306,7 @@
         }
 
         .quest {
-            grid-row: 2;
+            grid-row: 3;
             grid-column: 5;
             justify-content: center;
             align-self: flex-end;
@@ -297,38 +315,38 @@
         }
 
         .rewardCompany {
-            grid-row: 2;
+            grid-row: 3;
             grid-column: 7;
             justify-content: center;
-            align-self: flex-end;
+            margin-bottom: 0;
             width: 100px;
             margin-left: -35px;
         }
 
-        .member {
-            grid-row: 2;
-            grid-column: 9;
-            justify-content: center;
+        .memberCompany {
+            grid-row: 3;
+            grid-column: 9/11;
             align-self: flex-end;
             width: 100px;
             margin-left: -15px;
         }
 
         #questLink {
-            grid-row: 3;
+            grid-row: 4;
             grid-column: 4/6;
             text-align: center;
+            margin-left: -25px;
         }
 
         #rewardLink {
-            grid-row: 3;
+            grid-row: 4;
             grid-column: 6/8;
             text-align: center;
-            margin-left: -5px;
+            margin-left: -30px;
         }
 
         #memberLink {
-            grid-row: 3;
+            grid-row: 4;
             grid-column: 8/10;
             text-align: center;
         }
@@ -340,7 +358,10 @@
 
         .linkAll {
             font-size: 12px;
+            text-align: left;
         }
+
+
 
     }
 }
